--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="nav-bar">
             <div class="nav-container">
               <div class="brand">
-                <img src="pest-control/pest-control1.jpg" style="height: 80px; width: 100px;">
+                <img src="pest-control1.jpg" style="height: 80px; width: 100px;">
               </div>
               <nav>
                 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -69,13 +69,13 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="pest-control/pest-control2.jpeg" alt="First slide" style="height: 500px;">
+                        <img class="d-block w-100" src="pest-control2.jpeg" alt="First slide" style="height: 500px;">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="pest-control/pest-control3.jpg" alt="Second slide" style="height: 500px;">
+                        <img class="d-block w-100" src="pest-control3.jpg" alt="Second slide" style="height: 500px;">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="pest-control/pest-control4.jpg" alt="Third slide" style="height: 500px;">
+                        <img class="d-block w-100" src="pest-control4.jpg" alt="Third slide" style="height: 500px;">
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
