--- a/about us.html
+++ b/about us.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="only sale.css">
     <style>
         #bg{
-            background-image: url('D:/Html/bootstrap/only sales/only-sale38.jpg');
+            background-image: url('only-sale38.jpg');
             height: 250px;
             background-repeat: no-repeat;
             background-position: center;
@@ -23,7 +23,7 @@
     <header class="nav-bar">
         <div class="nav-container">
           <div class="brand">
-            <img src="D:\Html\bootstrap\only sales\only-sale.jpg" style="height: 60px; width: 150px;">
+            <img src="only-sale.jpg" style="height: 60px; width: 150px;">
           </div>
           <nav>
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -97,6 +97,7 @@
                       </div>
                  </div>
              </div>
+             <center>
              <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26); width: 500px; text-align: center;">
               <div class="card-body">
                 <h2 class="card-title pt-4" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">
@@ -111,11 +112,13 @@
                   </h5>
               </div>
             </div>
+             </center>
          </div>
       </section>
 
       <!-- <section>
           <div class="row">
+<center>
               <div class="col-sm-6">
                 <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                     <div class="card-body">
@@ -227,7 +230,7 @@
         <div class="conatiner">
           <center>
           <video width="50%" height="400px" controls autoplay>
-            <source src="videos/office1.mp4" type="video/mp4" style="height: 300px; width: 50%;" class="mx-auto">
+            <source src="office1.mp4" type="video/mp4" style="height: 300px; width: 50%;" class="mx-auto">
         </video>
         </center>
         </div>
@@ -236,7 +239,7 @@
         <div class="conatiner">
           <center>
           <video width="50%" height="400px" controls autoplay>
-            <source src="videos/office2.mp4" type="video/mp4" style="height: 300px; width: 50%;" class="mx-auto">
+            <source src="office2.mp4" type="video/mp4" style="height: 300px; width: 50%;" class="mx-auto">
         </video>
         </center>
         </div>
@@ -245,7 +248,7 @@
         <div class="conatiner">
           <center>
           <video width="50%" height="400px" controls autoplay>
-            <source src="videos/office3.mp4" type="video/mp4" style="height: 300px; width: 50%;" class="mx-auto">
+            <source src="office3.mp4" type="video/mp4" style="height: 300px; width: 50%;" class="mx-auto">
         </video>
         </center>
         </div>
