--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="nav-bar">
             <div class="nav-container">
               <div class="brand">
-                <img src="pest-control/pest-control1.jpg" style="height: 80px; width: 100px;">
+                <img src="pest-control1.jpg" style="height: 80px; width: 100px;">
               </div>
               <nav>
                 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -68,13 +68,13 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="pest-control/pest-control5.jpg" alt="First slide" style="height: 620px;">
+                        <img class="d-block w-100" src="pest-control5.jpg" alt="First slide" style="height: 620px;">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="pest-control/pest-control6.jpg" alt="Second slide" style="height: 620px;">
+                        <img class="d-block w-100" src="pest-control6.jpg" alt="Second slide" style="height: 620px;">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="pest-control/pest-control7.jpg" alt="Third slide" style="height: 620px;">
+                        <img class="d-block w-100" src="pest-control7.jpg" alt="Third slide" style="height: 620px;">
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -95,7 +95,7 @@
                         <div class="col-md-4">
                             <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                                 <div class="card-body text-center">
-                                    <img src="pest-control/pest-control8.jpg" style="height: 60px;">
+                                    <img src="pest-control8.jpg" style="height: 60px;">
                                     <hr>
                                   <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">Cockroach Control</h2>
                                   </h2>
@@ -105,7 +105,7 @@
                         <div class="col-md-4">
                             <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                                 <div class="card-body text-center">
-                                    <img src="pest-control/pest-control9.jpg" style="height: 60px; border-radius: 50%;">
+                                    <img src="pest-control9.jpg" style="height: 60px; border-radius: 50%;">
                                     <hr>
                                   <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">Commercial Pest Control</h2>
                                   </h2>
@@ -115,7 +115,7 @@
                         <div class="col-md-4">
                             <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                                 <div class="card-body text-center">
-                                    <img src="pest-control/pest-control10.jpg" style="height: 60px;">
+                                    <img src="pest-control10.jpg" style="height: 60px;">
                                     <hr>
                                   <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">Fly Control</h2>
                                   </h2>
@@ -132,7 +132,7 @@
                         <div class="col-md-4">
                             <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                                 <div class="card-body text-center">
-                                    <img src="pest-control/pest-control11.png" style="height: 60px;">
+                                    <img src="pest-control11.png" style="height: 60px;">
                                     <hr>
                                   <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">Lizard Control</h2>
                                   </h2>
@@ -142,7 +142,7 @@
                         <div class="col-md-4">
                             <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                                 <div class="card-body text-center">
-                                    <img src="pest-control/pest-control12.jpg" style="height: 60px; border-radius: 50%;">
+                                    <img src="pest-control12.jpg" style="height: 60px; border-radius: 50%;">
                                     <hr>
                                   <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">mosquito control</h2>
                                   </h2>
@@ -152,7 +152,7 @@
                         <div class="col-md-4">
                             <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                                 <div class="card-body text-center">
-                                    <img src="pest-control/pest-control13.jpg" style="height: 60px;">
+                                    <img src="pest-control13.jpg" style="height: 60px;">
                                     <hr>
                                   <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">Pest Control</h2>
                                   </h2>
@@ -169,7 +169,7 @@
                         <div class="col-md-4">
                             <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                                 <div class="card-body text-center">
-                                    <img src="pest-control/pest-control14.png" style="height: 60px;">
+                                    <img src="pest-control14.png" style="height: 60px;">
                                     <hr>
                                   <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">Rat Control</h2>
                                   </h2>
@@ -179,7 +179,7 @@
                         <div class="col-md-4">
                             <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                                 <div class="card-body text-center">
-                                    <img src="pest-control/pest-control15.jpg" style="height: 60px; border-radius: 50%;">
+                                    <img src="pest-control15.jpg" style="height: 60px; border-radius: 50%;">
                                     <hr>
                                   <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">Residential Pest Control</h2>
                                   </h2>
@@ -189,7 +189,7 @@
                         <div class="col-md-4">
                             <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                                 <div class="card-body text-center">
-                                    <img src="pest-control/pest-control16.png" style="height: 60px;">
+                                    <img src="pest-control16.png" style="height: 60px;">
                                     <hr>
                                   <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">rodent control</h2>
                                   </h2>
@@ -206,7 +206,7 @@
                       <div class="col-md-4">
                           <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                               <div class="card-body text-center">
-                                  <img src="pest-control/pest-control17.png" style="height: 60px;">
+                                  <img src="pest-control17.png" style="height: 60px;">
                                   <hr>
                                 <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">spider control</h2>
                                 </h2>
@@ -216,7 +216,7 @@
                       <div class="col-md-4">
                           <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                               <div class="card-body text-center">
-                                  <img src="pest-control/pest-control18.jpg" style="height: 60px; border-radius: 50%;">
+                                  <img src="pest-control18.jpg" style="height: 60px; border-radius: 50%;">
                                   <hr>
                                 <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">termite control</h2>
                                 </h2>
@@ -226,7 +226,7 @@
                       <div class="col-md-4">
                           <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                               <div class="card-body text-center">
-                                  <img src="pest-control/pest-control19.png" style="height: 60px;">
+                                  <img src="pest-control19.png" style="height: 60px;">
                                   <hr>
                                 <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">waps and bee control</h2>
                                 </h2>
@@ -243,7 +243,7 @@
                     <div class="col-md-4">
                         <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                             <div class="card-body text-center">
-                                <img src="pest-control/pest-control20.jpg" style="height: 60px;">
+                                <img src="pest-control20.jpg" style="height: 60px;">
                                 <hr>
                               <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">woodborer control</h2>
                               </h2>
@@ -253,7 +253,7 @@
                     <!-- <div class="col-md-4">
                         <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                             <div class="card-body text-center">
-                                <img src="pest-control/pest-control18.jpg" style="height: 60px; border-radius: 50%;">
+                                <img src="pest-control18.jpg" style="height: 60px; border-radius: 50%;">
                                 <hr>
                               <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">termite control</h2>
                               </h2>
@@ -263,7 +263,7 @@
                     <div class="col-md-4">
                         <div class="card shadow p-3 mb-5 bg-white rounded" style="box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26);">
                             <div class="card-body text-center">
-                                <img src="pest-control/pest-control19.png" style="height: 60px;">
+                                <img src="pest-control19.png" style="height: 60px;">
                                 <hr>
                               <h2 class="card-title" style="color: rgb(116, 118, 119); font-family: Georgia, 'Times New Roman', Times, serif;">waps and bee control</h2>
                               </h2>
@@ -321,7 +321,7 @@
                       <h6 class="pl-5">Contact</h6>
                   </div>
                   <div class="col-md-4">
-                      <img src="pest-control/pest-control1.jpg" style="height: 75px; width: 250px; border-radius: 50px;">
+                      <img src="pest-control1.jpg" style="height: 75px; width: 250px; border-radius: 50px;">
                       <p class="pt-5">Phone :- +91 8657230075 <br>
                       <a href="websupport@justdial.com" style="color: #fff;">Email :- websupport@justdial.com</a>
                       <p>Our Timing: Mon - Sun : 08:45 AM - 08:30 PM / 12:00 AM - 12:00 AM</p>
